--- a/style.css
+++ b/style.css
@@ -166,10 +166,9 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  border-radius: 20px;
 }
 .swiper-banner .swiper-slide .container {
-  margin-top: 163px;
+  padding-top: 163px;
   padding-bottom: 73px;
 }
 .swiper-banner .swiper-pagination-bullet {
@@ -183,13 +182,38 @@ html {
 .swiper-banner .swiper-pagination-bullet-active {
   background-color: #fff;
 }
-.swiper-banner .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-banner .swiper-horizontal > .swiper-pagination-bullets,
+.swiper-banner .swiper-pagination-bullet,
 .swiper-banner .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 13px);
+  margin: 0 var(--swiper-pagination-bottom, 13px);
 }
 .swiper-banner .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-banner .swiper-pagination-bullets.swiper-pagination-horizontal {
   top: calc(100% - 59px);
+}
+.swiper-banner .swiper-banner-arrow {
+  --padding: 36px;
+  height: 46px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: calc(1522px + var(--padding) * 2);
+  padding: 0 var(--padding);
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+}
+.swiper-banner .swiper-button-next,
+.swiper-banner .swiper-button-prev {
+  color: #fff;
+  position: static;
+  margin-bottom: 0;
+}
+.swiper-banner .swiper-button-next:hover,
+.swiper-banner .swiper-button-prev:hover {
+  color: #89c249;
 }
 
 .banner-title {
@@ -198,35 +222,43 @@ html {
   text-transform: uppercase;
   margin-bottom: 24px;
   max-width: 515px;
-  margin-bottom: 10px;
   line-height: 1.26;
 }
 
 .banner-description {
-  max-width: 600px;
+  max-width: 320px;
   font-size: 20px;
   font-weight: 300;
-  max-width: 340px;
   margin-bottom: 37px;
-  line-height: 1.35;
+  line-height: 1.36;
 }
 
-@media screen and (max-width: 1199px) {
+@media (min-width: 992px) {
+  .swiper-banner .swiper-slide {
+    border-radius: 20px;
+  }
+}
+@media (min-width: 1400px) {
+  .swiper-banner .swiper-slide .container {
+    padding: 163px 72px 73px;
+  }
+}
+@media screen and (max-width: 1199.99px) {
   .navbar-nav {
     max-width: 540px;
   }
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 991.99px) {
   .logo {
     max-width: 126px;
   }
   .navbar {
-    padding: 17px 0 15px;
+    padding: 16px 0 15px;
   }
   .navbar-collapse {
     background-color: #363a4d;
-    margin: 0 -11px;
-    padding: 0px 40px 0px;
+    margin: 0 -12px;
+    padding: 0px 40px;
     text-align: center;
     transform: translate(0, 12px);
   }
@@ -240,13 +272,43 @@ html {
     font-size: 16px;
     padding: 21px 27px;
   }
-  .navbar-nav .nav-link {
+  .nav-link {
     color: #fff;
     font-size: 24px;
     line-height: 222%;
   }
-  .navbar-nav .nav-link:hover {
+  .nav-link:hover {
     color: #e58d35;
+  }
+  .swiper-banner .swiper-slide {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    min-height: calc(100vh - 72px);
+  }
+  .swiper-banner .swiper-slide:before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: rgba(4, 9, 17, 0.6);
+    z-index: -1;
+  }
+  .swiper-banner .swiper-slide .container {
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .banner-title {
+    font-size: 32px;
+  }
+  .banner-description {
+    font-size: 16px;
+    margin-bottom: 18px;
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
