--- a/style.css
+++ b/style.css
@@ -52,6 +52,45 @@ body {
   line-height: 1.3;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 56px;
+  line-height: 1.26;
+}
+
+h2 {
+  font-size: 36px;
+  line-height: 1.245;
+}
+
+h3 {
+  font-size: 22px;
+  line-height: 1.245;
+}
+
+h4 {
+  font-size: 20px;
+  line-height: 1.355;
+}
+
+h5 {
+  font-size: 18px;
+  line-height: 1.245;
+}
+
+h6 {
+  font-size: 17px;
+  line-height: 1.26;
+}
+
 html {
   font-size: 16px;
 }
@@ -106,16 +145,61 @@ html {
   background-color: #e58d35;
 }
 
+.template-title {
+  text-align: center;
+  position: relative;
+  padding-bottom: 70px;
+}
+.template-title h2 {
+  text-transform: uppercase;
+  margin-bottom: 7px;
+}
+.template-title h2::after {
+  content: "";
+  position: absolute;
+  width: 85px;
+  height: 2px;
+  background-color: #e58d35;
+  bottom: 54px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.template-title h3 {
+  font-weight: 400;
+  font-size: 24px;
+}
+.template-title.template-title_case-2 {
+  text-align: left;
+}
+.template-title.template-title_case-2 h2 {
+  text-align: left;
+}
+.template-title.template-title_case-2 h2::after {
+  left: 0;
+  transform: none;
+}
+.template-title.template-title_case-3 {
+  text-align: left;
+  max-width: 626px;
+}
+.template-title.template-title_case-3 h2::after {
+  position: static;
+  display: inline-block;
+  transform: none;
+  margin: 0 0 8px 20px;
+}
+
 .logo {
   max-width: 172px;
 }
 
 .navbar {
-  padding: 37px 0 27px;
+  padding: 25px 0 40px;
 }
 
 .navbar-nav {
-  max-width: 618px;
+  max-width: 619px;
+  padding: 5px 0 0 0;
 }
 
 .nav-link {
@@ -198,7 +282,7 @@ html {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: calc(1522px + var(--padding) * 2);
+  max-width: calc(1503px + var(--padding) * 2);
   padding: 0 var(--padding);
   z-index: 1;
   display: flex;
