--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ body {
   line-height: 1.3;
 }
 
+section {
+  margin-bottom: 100px;
+}
+
 h1,
 h2,
 h3,
@@ -314,6 +318,78 @@ html {
   font-weight: 300;
   margin-bottom: 37px;
   line-height: 1.36;
+}
+
+.calculation-form {
+  max-width: 626px;
+  background: #363a4d;
+  border-radius: 20px;
+  padding: 50px 50px 60px;
+}
+
+.form-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px 30px;
+  margin-bottom: 34px;
+}
+.form-row:last-of-type {
+  margin-bottom: 24px;
+}
+
+.form-column {
+  width: calc(50% - 15px);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.input-box {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.input-box_checkbox {
+  padding-left: 45px;
+}
+
+label {
+  cursor: pointer;
+}
+
+input {
+  background-color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+  padding: 18px 20px;
+}
+
+input[type=checkbox] {
+  display: none;
+}
+input[type=checkbox] + label:hover:before {
+  border-color: #e58d35;
+}
+
+input[type=checkbox] + label:before {
+  content: "";
+  background-color: #fff;
+  border: 1px solid #282b38;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 4px;
+}
+
+input[type=checkbox]:checked + label:before {
+  content: "";
+  background-image: url("assets/img/icon-checked.svg");
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 @media (min-width: 992px) {
