--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-/*
-Theme Name: CustomTheme
-Theme URI: https://wordpress.org/themes/CustomTheme/
-Author: the Rost team
-Author URI: http://rost.com.ua/
-Description: CustomTheme brings your site to life with immersive featured images and subtle animations. Our default theme works great in many languages, for any abilities, and on any device.
-Version: 1.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: CustomTheme
-Tags: custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-*/
 @font-face {
   font-family: "ProximaNova";
   src: url("assets/fonts/ProximaNova-Light.ttf") format("truetype");
@@ -133,15 +119,15 @@ input[type=file] {
 input[type=file] + label {
   text-align: center;
   padding: 12px 12px;
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%23fff' stroke-width='2' stroke-dasharray='8px%2c 10px ' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%23fff' stroke-width='2' stroke-dasharray='3px%2c 6px' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
   border-radius: 10px;
   background-repeat: no-repeat;
-  background-position: center;
   background-size: calc(100% - 1px) calc(100% - 1px);
+  background-position: center;
   margin-bottom: 2px;
 }
 input[type=file] + label:hover {
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%2389C249' stroke-width='2' stroke-dasharray='3px%2c 6px ' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%2389C249' stroke-width='2' stroke-dasharray='3px%2c 6px' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
 }
 input::placeholder {
   color: #cbcbcb;
@@ -154,14 +140,12 @@ input[type=checkbox] + label:hover::before {
   border-color: #e58d35;
 }
 
-/* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
 }
@@ -188,6 +172,27 @@ input[type=checkbox]:checked + label:before {
   content: "";
   background: url(assets/img/icon-checked.svg) no-repeat center;
   background-color: #ffffff;
+}
+
+.bg-accent {
+  position: relative;
+  padding: 90px 0 100px;
+}
+.bg-accent .container {
+  max-width: 1364px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+.bg-accent:before {
+  content: "";
+  position: absolute;
+  inset: 0 12px;
+  background-color: #363a4d;
+  max-width: 1820px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  z-index: -1;
 }
 
 html {
@@ -454,7 +459,7 @@ html {
 }
 .swiper-banner .swiper-banner-arrow {
   --padding: 36px;
-  height: 46px;
+  height: 0px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -515,6 +520,36 @@ html {
   left: 610px;
 }
 
+.advantage {
+  text-align: center;
+}
+
+.advantage__img-box {
+  width: 113px;
+  height: 113px;
+  border: 1px solid #6c7188;
+  margin: 0 auto 22px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.advantage__img-box:before {
+  content: "";
+  position: absolute;
+  inset: 10px;
+  background: #89c249;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.advantage__title {
+  font-size: 18px;
+  font-weight: 400;
+}
+
 @media (min-width: 992px) {
   .swiper-banner {
     width: calc(100% - 24px);
@@ -522,13 +557,16 @@ html {
   .swiper-banner .swiper-slide {
     border-radius: 20px;
   }
-}
-@media (min-width: 1400px) {
-  .swiper-banner .swiper-slide .container {
-    padding: 163px 72px 73px;
+  .advantages .swiper-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 48px 24px;
   }
 }
 @media screen and (max-width: 1399.99px) {
+  .navbar-nav {
+    max-width: 540px;
+  }
   .swiper-banner .swiper-slide .container {
     padding: 163px 72px 73px;
   }
@@ -539,6 +577,9 @@ html {
   }
   .calculation-img {
     width: 35vw;
+  }
+  .bg-accent:before {
+    inset: 0 12px;
   }
 }
 @media screen and (max-width: 991.98px) {
@@ -551,7 +592,6 @@ html {
   .navbar-collapse {
     background-color: #363a4d;
     margin: 0 -12px;
-    padding: 0px 40px;
     text-align: center;
     transform: translate(0, 12px);
   }
@@ -572,6 +612,10 @@ html {
   }
   .nav-link:hover {
     color: #e58d35;
+  }
+  .bg-accent:before {
+    border-radius: 0;
+    inset: 0;
   }
   .container {
     padding-left: 20px;
@@ -598,7 +642,7 @@ html {
     text-align: center;
   }
   .banner-title {
-    font-size: 32px;
+    font-size: 36px;
   }
   .banner-description {
     font-size: 16px;
@@ -623,6 +667,9 @@ html {
     width: 100%;
     display: flex;
     justify-content: space-between;
+  }
+  .nice-select:after {
+    display: none;
   }
   .form-row {
     flex-direction: column;
