--- a/style.css
+++ b/style.css
@@ -371,6 +371,63 @@ html {
   right: 20px;
 }
 
+.template-carousel {
+  position: relative;
+}
+.template-carousel .card {
+  margin: 0 auto;
+}
+
+.delivery .template-carousel .swiper .swiper-pagination {
+  position: static;
+  margin-top: 32px;
+}
+
+.swiper-pagination-bullet {
+  width: 8px;
+  height: 8px;
+  border: 2px solid #fff;
+  background-color: transparent;
+  opacity: 1;
+  cursor: pointer;
+}
+.swiper-pagination-bullet-active {
+  background-color: #fff;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 13px);
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff;
+  position: static;
+  margin-bottom: 0;
+}
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  color: #89c249;
+}
+
+.swiper-arrow-container {
+  --padding: 20px;
+  height: 0px;
+  position: absolute;
+  top: calc(50% - 23px);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: calc(1503px + var(--padding) * 2);
+  padding: 0 var(--padding);
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  width: calc(100% + 183px);
+}
+
 .logo {
   max-width: 172px;
 }
@@ -451,16 +508,6 @@ html {
   display: flex;
   justify-content: space-between;
 }
-.swiper-banner .swiper-button-next,
-.swiper-banner .swiper-button-prev {
-  color: #fff;
-  position: static;
-  margin-bottom: 0;
-}
-.swiper-banner .swiper-button-next:hover,
-.swiper-banner .swiper-button-prev:hover {
-  color: #89c249;
-}
 .swiper-banner .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-banner .swiper-pagination-bullets.swiper-pagination-horizontal {
   top: calc(100% - 59px);
@@ -482,24 +529,6 @@ html {
   font-weight: 300;
   margin-bottom: 37px;
   line-height: 1.36;
-}
-
-.swiper-pagination-bullet {
-  width: 8px;
-  height: 8px;
-  border: 2px solid #fff;
-  background-color: transparent;
-  opacity: 1;
-  cursor: pointer;
-}
-.swiper-pagination-bullet-active {
-  background-color: #fff;
-}
-
-.swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullet,
-.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 13px);
 }
 
 .calculation .template-title {
@@ -580,6 +609,7 @@ html {
 .card-title {
   font-size: 22px;
   margin-bottom: 12px;
+  text-align: center;
 }
 .card__options-list {
   list-style: none;
@@ -598,6 +628,7 @@ html {
 .card .card__price {
   margin-bottom: 22px;
   font-size: 22px;
+  text-align: center;
 }
 .card .card__price span:first-child {
   color: #a3a3a3;
@@ -631,6 +662,18 @@ html {
   z-index: 1;
 }
 
+.card_services {
+  min-height: 482px;
+}
+.card_services .card-title {
+  text-align: left;
+}
+
+.services .template-carousel .swiper .swiper-pagination {
+  position: static;
+  margin-top: 32px;
+}
+
 @media (min-width: 992px) {
   .swiper-banner {
     width: calc(100% - 24px);
@@ -650,6 +693,10 @@ html {
   }
   .swiper-banner .swiper-slide .container {
     padding: 132px 72px 73px;
+  }
+  .template-carousel {
+    margin: 0 auto;
+    max-width: 750px;
   }
 }
 @media screen and (max-width: 1199.99px) {
