--- a/style.css
+++ b/style.css
@@ -889,17 +889,22 @@ html {
     left: 50%;
     transform: translateX(-50%);
   }
-  .about-section .container {
+  .delivery .card__btn-row .btn {
+    width: auto;
+    height: auto;
+    margin: 0 auto;
+  }
+  .bt .about-section .container {
     flex-direction: column;
     align-items: center;
     text-align: justify;
     gap: 47px;
   }
-  .about-section .container .about__img-box {
+  .bt .about-section .container .about__img-box {
     max-width: 400px;
     height: auto;
   }
-  .about-section .container .about-text__description {
+  .bt .about-section .container .about-text__description {
     margin: 0 auto;
   }
 }
