--- a/style.css
+++ b/style.css
@@ -390,6 +390,7 @@ html {
 .delivery .template-carousel .swiper .swiper-pagination {
   position: static;
   margin-top: 32px;
+  margin-left: 0px;
 }
 
 .swiper-pagination-bullet {
@@ -681,6 +682,7 @@ html {
 .services .template-carousel .swiper .swiper-pagination {
   position: static;
   margin-top: 32px;
+  margin-left: 0px;
 }
 
 .about-section .container {
@@ -738,7 +740,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 125px;
+  gap: 60px;
   width: 310px;
   height: 68px;
   padding: 0 20px;
@@ -753,20 +755,22 @@ html {
 
 .faq-form__title {
   font-size: 24px;
-  margin-bottom: 8px;
+  line-height: 126%;
+  margin-bottom: 12px;
 }
 
 .faq-form__subtitle {
   font-size: 17px;
   margin-bottom: 23px;
   font-weight: 300;
+  line-height: 126%;
 }
 
 textarea {
   min-height: 55px;
   height: 70px;
   max-height: 160px;
-  margin-bottom: 26px;
+  margin-bottom: 12px;
 }
 
 .about-faq .accordion {
@@ -782,6 +786,9 @@ textarea {
   border-radius: 10px;
   background-color: transparent;
   color: #ffffff;
+  font-size: 18px;
+  line-height: 125%;
+  color: #fff;
   box-shadow: none;
   font-weight: 800;
   padding: 22px 19px 22px 34px;
@@ -797,7 +804,18 @@ textarea {
   transform: rotate(-90deg);
 }
 .about-faq .accordion .accordion-body {
-  padding: 22px 34px 34px;
+  padding: 2px 34px 28px;
+  color: #ffffff;
+}
+.about-faq .list-group-horizontal > .list-group-item.active,
+.about-faq dl,
+.about-faq ol,
+.about-faq p,
+.about-faq ul {
+  margin-top: 0;
+  font-weight: 300;
+  font-size: 17px;
+  line-height: 145%;
   color: #ffffff;
 }
 
@@ -996,6 +1014,28 @@ textarea {
   }
   .faq__row {
     flex-direction: column;
+  }
+  .faq-form {
+    min-width: 335px;
+    padding: 38px 20px;
+  }
+  .faq-form .btn-lg {
+    max-width: 100%;
+    height: 68px;
+    padding: 0 28px;
+    gap: 0px;
+  }
+  .faq-form .btn-lg .btn-text {
+    line-height: 146%;
+  }
+  .faq-form .btn-lg .btn-arrow {
+    flex-shrink: 0;
+    margin-left: auto;
+  }
+  .faq-form__title,
+  .faq-form__subtitle {
+    text-align: center;
+    padding: 0px 12px 0px 12px;
   }
 }
 @media screen and (max-width: 767.98px) {
